crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badSkelBindingNoSkelRoot.usda
version https://git-lfs.github.com/spec/v1
oid sha256:c5bde682489adc741d56165025d348053699a431768e022175f819d263a60ec3
size 215
